# hermes-notify

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
config/: notify.yaml
examples/: macos-notify.py  play-sound.py  slack-notify.sh
hermes_notify/: __init__.py  bus_callback.py  bus_notifier.py  notify_agent.py  notify_hermes.py
